# time-steward

./: .gitignore  Cargo.toml  README.md  bouncy-circles.html  default.nix  documentation_scripts  emscripten-examples.css  emscripten-examples.js  notes.md  quadtree-diffusion.html  rustfmt.toml  shell.nix  simple-diffusion.html  test-server.js
benches/: bouncy_circles.rs  bouncy_circles_rowless.rs
bouncy-circles/: Cargo.toml
bouncy-circles-native-frontend/: Cargo.toml
bouncy-circles-native-frontend/src/: main.rs
bouncy-circles/benches/: bouncy_circles.rs
bouncy-circles/src/: benchmarks.rs  lib.rs  physics.rs
dev-shared/: bouncy_circles.rs  bouncy_circles_rowless.rs  emscripten_compatibility.rs  space_game.rs  tree_continuum.rs
entity-views/: Cargo.toml
entity-views/src/: lib.rs
examples/: bouncy_circles.rs  bouncy_circles_rowless.rs  fluid_dynamics.rs  handshakes.rs  quadtree_diffusion.rs  simple_diffusion.rs  simple_diffusion_rowless.rs  space_game.rs
integer-math/: Cargo.toml
integer-math/src/: array.rs  lib.rs  maybe_const.rs  polynomial.rs  polynomial2.rs  polynomial2_testing.rs  polynomial2_tests.rs  polynomial_impls.rs  range_search.rs  trajectory.rs  trajectory_impls.rs
src/: amortized_time_steward.rs  api.rs  api_macros.rs  api_rowless.rs  crossverified_time_stewards.rs  data_structures.rs  deterministic_random_id.rs  inefficient_flat_time_steward.rs  insert_only.rs  lib.rs  list_of_types.rs  memoized_flat_time_steward.rs  rounding_error_tolerant_math.rs  serialization.rs  simple_flat_time_steward.rs  time_functions.rs
src/collision_detection/: inefficient.rs  mod.rs  simple_grid.rs
src/dynamic/: list_of_types.rs  thin_arc.rs
src/examples/: bouncy_circles.rs  handshakes.rs
src/implementation_support/: common.rs  data_structures.rs  insert_only.rs  list_of_types.rs
src/rowless/: README.md  api.rs  api_impls.rs  serialization.rs
src/rowless/implementation_support/: common.rs
src/rowless/stewards/: inefficient_flat.rs  simple_flat.rs  simple_full.rs  simplest.rs
src/rowless/support/: automatic_tracking.rs  simple_timeline.rs
src/stewards/: amortized.rs  amortized_notes.rs  common.rs  crossverified.rs  flat_to_inefficient_full.rs  inefficient_flat.rs  memoized_flat.rs  simple_flat.rs  simple_full.rs  simply_synchronized.rs
src/stewards/amortized/: impls.rs  mod.rs  types.rs
src/stewards/optimized/: core.rs  mod.rs
src/support/: bbox_collision_detection.rs  rounding_error_tolerant_math.rs  simple_timeline.rs  time_functions.rs  trajectories.rs
src/support/collision_detection/: inefficient.rs  mod.rs  simple_grid.rs
src/support/integer_math/: mod.rs  polynomial.rs
src/support/rounding_error_tolerant_math/: mod.rs  polynomials.rs  range.rs
tests/: handshakes.rs  handshakes_rowless.rs  paces.rs
time-steward/: Cargo.toml
time-steward-api/: Cargo.toml
time-steward-api/src/: api.rs  api_impls.rs  entity_handle_impls.rs  entity_handles.rs  entity_id.rs  lib.rs
time-steward-implementation-support/: Cargo.toml
time-steward-implementation-support/src/: accessor_cell.rs  lib.rs
time-steward-simple-flat/: Cargo.toml
time-steward-simple-flat/src/: lib.rs
time-steward/benches/: bouncy_circles.rs
time-steward/dev-shared/: bouncy_circles.rs  emscripten_compatibility.rs  space_game.rs  tree_continuum.rs
time-steward/examples/: bouncy_circles.rs  fluid_dynamics.rs  quadtree_diffusion.rs  simple_diffusion.rs  space_game.rs
time-steward/src/: access.rs  api.rs  api_impls.rs  deterministic_random_id.rs  lib.rs  serialization.rs
time-steward/src/dynamic/: list_of_types.rs  thin_arc.rs
time-steward/src/implementation_support/: common.rs  data_structures.rs  insert_only.rs  serialization.rs
time-steward/src/stewards/: auditing.rs  simple_flat.rs  simple_full.rs
time-steward/src/support/: bbox_collision_detection.rs  simple_timeline.rs  time_functions.rs  trajectories.rs
time-steward/src/support/integer_math/: mod.rs
time-steward/src/support/rounding_error_tolerant_math/: mod.rs  polynomials.rs  range.rs
time-steward/tests/: handshakes.rs
type-utils/: Cargo.toml
type-utils/src/: lens.rs  lib.rs  list_of_types.rs  visit_serialized.rs
