[package]
name = "time_steward"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
repository = "https://github.com/elidupree/time-steward"
readme = "README.md"
license = "MIT"

[dependencies]
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
quickcheck = "0.4"
#quickcheck_macros = "0.2"
bincode = "0.8"
crossbeam = "0.2"
siphasher = "0.2.2"

[dependencies.nalgebra]
version = "0.12"
features = ["serde-serialize"]

[dev-dependencies]
glium = "0.15"
docopt = "0.6"
rustc-serialize = "0.3"
fnv = "1.0"

[profile.bench]
debug = true
