[workspace]

members = [
  "integer-math",
  "type-utils",
  "time-steward-api",
  "time-steward-implementation-support",
  "time-steward-simple-flat",
  "time-steward",
  "bouncy-circles",
  "bouncy-circles-native-frontend",
]

[profile.bench]
debug = true

[profile.test]
incremental = false

[profile.dev]
incremental = false

[profile.release]
codegen-units = 1
