[package]
name = "bouncy_circles"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
repository = "https://github.com/elidupree/time-steward"
readme = "README.md"
license = "MIT"

edition = "2018"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
rand_pcg = {version = "0.3.0", features = ["serde1"]}
time_steward = {path="../time-steward"}

