[package]
name = "bouncy_circles"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
repository = "https://github.com/elidupree/time-steward"
readme = "README.md"
license = "MIT"

edition = "2018"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
rand = "0.8.3"
rand_pcg = {version = "0.3.0", features = ["serde1"]}
nalgebra = {version = "0.26.2", features = ["serde-serialize"]}
time_steward = {path="../time-steward"}
time_steward_simple_flat = {path="../time-steward-simple-flat"}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bouncy_circles"
harness = false
