[package]
name = "time_steward_integer_math"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
repository = "https://github.com/elidupree/time-steward"
readme = "README.md"
license = "MIT"

edition = "2018"

[dependencies]
rand = "0.5"
quickcheck = "0.6.2"
proptest = "0.7.1"
array_ext = "0.2"
num = "0.2"
failure = "0.1.1"
smallvec = "0.6.1"
arrayvec = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
nalgebra = {version = "0.26.2", features = ["serde-serialize"]}
