[package]
name = "time_steward_integer_math"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
repository = "https://github.com/elidupree/time-steward"
readme = "README.md"
license = "MIT"

edition = "2018"

[dependencies]
rand = "0.5"
array_ext = "0.2"
num = "0.4"
thiserror = "1.0.30"
smallvec = "0.6.1"
arrayvec = "0.7.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "1.12.0"
derivative = "2.2.0"
derive_more = "0.99.17"
guard = "0.5.1"
forward_ref_generic = "0.2.1"
nalgebra = {version = "0.26.2", features = ["serde-serialize"]}
live-prop-test = {git = "https://github.com/elidupree/live-prop-test"}

[dev-dependencies]
quickcheck = "0.6.2"
proptest = "1.0.0"
