[package]
name = "time_steward_api"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
repository = "https://github.com/elidupree/time-steward"
readme = "README.md"
license = "MIT"

edition = "2018"

[dependencies]
rand = "0.8.3"
serde = {version = "1.0", features = ["derive"]}
siphasher = "0.2.2"
bincode = "0.8"
derivative = {git="https://github.com/mcarton/rust-derivative"}
time_steward_type_utils = {path="../type-utils"}

