[package]
name = "time_steward_implementation_support"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
repository = "https://github.com/elidupree/time-steward"
readme = "README.md"
license = "MIT"

edition = "2018"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
time_steward_api = {path="../time-steward-api"}

