[package]
name = "time_steward_simple_flat"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
repository = "https://github.com/elidupree/time-steward"
readme = "README.md"
license = "MIT"

edition = "2018"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3.3"
triomphe = { git = "https://github.com/elidupree/triomphe", features = ["unsize"]}
unsize = "1.1.0"
derivative = "2.2.0"
time_steward_type_utils = {path="../type-utils"}
time_steward_api = {path="../time-steward-api"}
time_steward_entity_views = {path="../entity-views"}
time_steward_implementation_support = {path="../time-steward-implementation-support"}

