[package]
name = "time_steward"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
repository = "https://github.com/elidupree/time-steward"
readme = "README.md"
license = "MIT"

edition = "2018"

[dependencies]
rand = "0.5"
rand_core = "0.2"
serde = {version = "1.0", features = ["derive"]}
quickcheck = "0.6.2"
proptest = "0.7.1"
bincode = "0.8"
#crossbeam = "0.2"
siphasher = "0.2.2"
derivative = {git="https://github.com/mcarton/rust-derivative"}
dimensioned = "0.6"
array_ext = "0.2"
num = "0.2"
failure = "0.1.1"
smallvec = "0.6.1"
scopeguard = "1.1.0"
triomphe = { git = "https://github.com/elidupree/triomphe", features = ["unsize"]}
unsize = "1.1.0"
time_steward_integer_math = {path="../integer-math"}
time_steward_type_utils = {path="../type-utils"}

[dependencies.nalgebra]
version = "0.18"
features = ["serde-serialize"]

[dependencies.rpds]
version = "0.3"
features = ["serde"]

[dev-dependencies]
glium = "0.15"
docopt = "0.8"
fnv = "1.0"
boolinator = "2.4"

[replace]
#"backtrace:0.2.3" = { git = "https://github.com/elidupree/backtrace-rs", branch = "emscripten-fix" }
