[package]
name = "time_steward"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
repository = "https://github.com/elidupree/time-steward"
readme = "README.md"
license = "MIT"

edition = "2018"

[dependencies]
rand = "0.8.3"
#rand_core = "0.6.2"
serde = {version = "1.0", features = ["derive"]}
quickcheck = "0.6.2"
proptest = "0.7.1"
bincode = "0.8"
#crossbeam = "0.2"
siphasher = "0.2.2"
derivative = "2.2.0"
dimensioned = "0.6"
array_ext = "0.2"
num = "0.2"
failure = "0.1.1"
smallvec = "0.6.1"
scopeguard = "1.1.0"
nalgebra = {version = "0.26.2", features = ["serde-serialize"]}
time_steward_integer_math = {path="../integer-math"}
time_steward_type_utils = {path="../type-utils"}
time_steward_api = {path="../time-steward-api"}
time_steward_entity_views = {path="../entity-views"}

[dependencies.rpds]
version = "0.3"
features = ["serde"]

[dev-dependencies]
glium = "0.15"
docopt = "0.8"
fnv = "1.0"
boolinator = "2.4"
rand_pcg = {version = "0.3.0", features = ["serde1"]}
time_steward_simple_flat = {path="../time-steward-simple-flat"}

[replace]
#"backtrace:0.2.3" = { git = "https://github.com/elidupree/backtrace-rs", branch = "emscripten-fix" }
